update heroes file

--- a/src/main/resources/templates/heroes.hbs
+++ b/src/main/resources/templates/heroes.hbs
@@ -194,8 +194,8 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="focus" name="weakness" value="focus">
-                                <label class="form-check-label" for="focus">
+                                <input class="form-check-input" type="checkbox" id="slow" name="weakness" value="slow">
+                                <label class="form-check-label" for="slow">
                                     Lose Focus
                                 </label>
                             </div>
@@ -206,14 +206,14 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="anger" name="weakness" value="Too much anger">
-                                <label class="form-check-label" for="anger">
+                                <input class="form-check-input" type="checkbox" id="agitate" name="agitate" value="Agitated">
+                                <label class="form-check-label" for="agitate">
                                     Too much anger
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="personally" name="weakness" value="personally">
-                                <label class="form-check-label" for="personally">
+                                <input class="form-check-input" type="checkbox" id="ideologist" name="weakness" value="ideologist">
+                                <label class="form-check-label" for="ideologist">
                                     Take things personally
                                 </label>
                             </div>
