update heroesList file

--- a/src/main/resources/templates/heroesList.hbs
+++ b/src/main/resources/templates/heroesList.hbs
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/heroesList.css">
+    <link rel="stylesheet" href="/public/css/heroesList.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Sansita&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='/css/app.css'>
+    <link rel='stylesheet' href='/public/css/app.css'>
 </head>
 <body>
 
-<h1 class="mt-5 text-center">The Heroes List</h1>
+<h1 class="mt-5 text-center">Heroes List</h1>
 
 {{#if heroes}}
     {{#each heroes}}
