--- a/src/main/resources/templates/successhero.hbs
+++ b/src/main/resources/templates/successhero.hbs
@@ -9,8 +9,8 @@
 <body>
 <div class="container success text-center mt-5">
     <h1>Success!</h1>
-    <h6>Your Hero post has been saved.</h6>
-    <a href="/heroes/list">View your heroes</a>
+    <h6>Your Hero post has been recorded!</h6>
+    <a href="/heroes/list">Display heroes</a>
 </div>
 
 </body>
