--- a/src/main/resources/templates/heroes.hbs
+++ b/src/main/resources/templates/heroes.hbs
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/public/css/heroes.css">
+    <link rel="stylesheet" href="/css/heroes.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Sansita&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='/public/css/app.css'>
+    <link rel='stylesheet' href='/css/app.css'>
 </head>
 <body>
 {{#if editHero}}
@@ -30,32 +30,32 @@
                         <div class="col-sm-6">
                             <h4>Select a hero's power(s)</h4>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gravity-control" name="power" value="gravity-control">
-                                <label class="form-check-label" for="gravity-control">
+                                <input class="form-check-input" type="checkbox" id="meticulous" name="power" value="meticulous">
+                                <label class="form-check-label" for="meticulous">
                                     Gravity Control
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="time-pause" name="power" value="time-pause">
-                                <label class="form-check-label" for="time-pause">
+                                <input class="form-check-input" type="checkbox" id="super-fast" name="power" value="super-fast">
+                                <label class="form-check-label" for="super-fast">
                                     Time Pause
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="super-intelligence" name="power" value="super-intelligence">
-                                <label class="form-check-label" for="super-intelligence">
+                                <input class="form-check-input" type="checkbox" id="geek" name="power" value="geek">
+                                <label class="form-check-label" for="geek">
                                     Super Intelligence
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="danger-warning" name="power" value="danger-warning">
-                                <label class="form-check-label" for="danger-warning">
+                                <input class="form-check-input" type="checkbox" id="witty" name="power" value="witty">
+                                <label class="form-check-label" for="witty">
                                     Danger Warning
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="time-travel" name="time-travel" value="time-travel">
-                                <label class="form-check-label" for="time-travel">
+                                <input class="form-check-input" type="checkbox" id="futuristic" name="futuristic" value="futuristic">
+                                <label class="form-check-label" for="futuristic">
                                     Time Travel
                                 </label>
                             </div>
@@ -148,32 +148,32 @@
                         <div class="col-sm-6">
                             <h4>Choose your hero's powers</h4>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gravity-control" name="power" value="gravity-control">
-                                <label class="form-check-label" for="gravity-control">
+                                <input class="form-check-input" type="checkbox" id="meticulous" name="power" value="meticulous">
+                                <label class="form-check-label" for="meticulous">
                                     Gravity Control
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="time-pause" name="power" value="time-pause">
-                                <label class="form-check-label" for="time-pause">
+                                <input class="form-check-input" type="checkbox" id="super-fast" name="power" value="super-fast">
+                                <label class="form-check-label" for="super-fast">
                                     Time Pause
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="super-intelligence" name="power" value="super-intelligence">
-                                <label class="form-check-label" for="super-intelligence">
+                                <input class="form-check-input" type="checkbox" id="geek" name="power" value="geek">
+                                <label class="form-check-label" for="geek">
                                     Super Intelligence
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="danger-warning" name="power" value="danger-warning">
-                                <label class="form-check-label" for="danger-warning">
+                                <input class="form-check-input" type="checkbox" id="witty" name="power" value="witty">
+                                <label class="form-check-label" for="witty">
                                     Danger Warning
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="time-travel" name="time-travel" value="time-travel">
-                                <label class="form-check-label" for="time-travel">
+                                <input class="form-check-input" type="checkbox" id="futuristic" name="futuristic" value="futuristic">
+                                <label class="form-check-label" for="futuristic">
                                     Time Travel
                                 </label>
                             </div>
