--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,10 +1,10 @@
 {{#partial "styles"}}
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/app.css">
 {{/partial}}
 
 {{#partial "content"}}
     <div class="container mt-5 text-center w-75" id="home">
-        <h1>Create your squad(s) and add heroes </h1>
+        <h1>Create your squad and add heroes here </h1>
         <hr>
         <div class="container offset-md-3 text-center">
             <div class="row mt-5 ">
