--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='/css/app.css'>
 </head>
 <body>
-<h2 class="text-center mb-4 mt-5">Create your Squad!</h2>
+<h2 class="text-center mb-4 mt-5">Create a Squad!</h2>
 <div class="container mt-5 offset-sm-2 pt-3 pb-3">
     <div class="row">
         <div class="col offset-sm-2">
