--- a/src/main/resources/templates/heroes.hbs
+++ b/src/main/resources/templates/heroes.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
 {{#if editHero}}
-    <h2 class="text-center">Update hero information</h2>
+    <h2 class="text-center">Update your hero details!</h2>
     <div class="container mt-5 offset-sm-3 pt-3 pb-3">
         <div class="row">
             <div class="col-md-4 offset-sm-2">
@@ -28,34 +28,34 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-sm-6">
-                            <h4>Select a hero's power(s)</h4>
+                            <h4>Select your hero's power(s)</h4>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="meticulous" name="power" value="meticulous">
-                                <label class="form-check-label" for="meticulous">
+                                <input class="form-check-input" type="checkbox" id="gravity-control" name="power" value="gravity-control">
+                                <label class="form-check-label" for="gravity-control">
                                     Gravity Control
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="super-fast" name="power" value="super-fast">
-                                <label class="form-check-label" for="super-fast">
+                                <input class="form-check-input" type="checkbox" id="time-pause" name="power" value="time-pause">
+                                <label class="form-check-label" for="time-pause">
                                     Time Pause
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="geek" name="power" value="geek">
-                                <label class="form-check-label" for="geek">
+                                <input class="form-check-input" type="checkbox" id="super-intelligence" name="power" value="super-intelligence">
+                                <label class="form-check-label" for="super-intelligence">
                                     Super Intelligence
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="witty" name="power" value="witty">
-                                <label class="form-check-label" for="witty">
+                                <input class="form-check-input" type="checkbox" id="danger-warning" name="power" value="danger-warning">
+                                <label class="form-check-label" for="danger-warning">
                                     Danger Warning
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="futuristic" name="futuristic" value="futuristic">
-                                <label class="form-check-label" for="futuristic">
+                                <input class="form-check-input" type="checkbox" id="time-travel" name="time-travel" value="time-travel">
+                                <label class="form-check-label" for="time-travel">
                                     Time Travel
                                 </label>
                             </div>
@@ -77,8 +77,8 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="slow" name="slow" value="slow">
-                                <label class="form-check-label" for="slow">
+                                <input class="form-check-input" type="checkbox" id="focus" name="weakness" value="focus">
+                                <label class="form-check-label" for="focus">
                                     Lose Focus
                                 </label>
                             </div>
@@ -89,9 +89,9 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="Agitated" name="weakness" value="Agitated">
-                                <label class="form-check-label" for="Agitated">
-                                    Agitated
+                                <input class="form-check-input" type="checkbox" id="anger" name="weakness" value="Too much anger">
+                                <label class="form-check-label" for="anger">
+                                    Too much anger
                                 </label>
                             </div>
                             <div class="form-check">
@@ -148,32 +148,32 @@
                         <div class="col-sm-6">
                             <h4>Choose your hero's powers</h4>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="meticulous" name="power" value="meticulous">
-                                <label class="form-check-label" for="meticulous">
+                                <input class="form-check-input" type="checkbox" id="gravity-control" name="power" value="gravity-control">
+                                <label class="form-check-label" for="gravity-control">
                                     Gravity Control
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="super-fast" name="power" value="super-fast">
-                                <label class="form-check-label" for="super-fast">
+                                <input class="form-check-input" type="checkbox" id="time-pause" name="power" value="time-pause">
+                                <label class="form-check-label" for="time-pause">
                                     Time Pause
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="geek" name="power" value="geek">
-                                <label class="form-check-label" for="geek">
+                                <input class="form-check-input" type="checkbox" id="super-intelligence" name="power" value="super-intelligence">
+                                <label class="form-check-label" for="super-intelligence">
                                     Super Intelligence
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="witty" name="power" value="witty">
-                                <label class="form-check-label" for="witty">
+                                <input class="form-check-input" type="checkbox" id="danger-warning" name="power" value="danger-warning">
+                                <label class="form-check-label" for="danger-warning">
                                     Danger Warning
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="futuristic" name="futuristic" value="futuristic">
-                                <label class="form-check-label" for="futuristic">
+                                <input class="form-check-input" type="checkbox" id="time-travel" name="time-travel" value="time-travel">
+                                <label class="form-check-label" for="time-travel">
                                     Time Travel
                                 </label>
                             </div>
@@ -188,14 +188,14 @@
                         <div class="col-sm-6">
                             <h4>Select your hero's weaknesses</h4>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="hostile" name="weakness" value="hostile">
-                                <label class="form-check-label" for="hostile">
+                                <input class="form-check-input" type="checkbox" id="impatient" name="weakness" value="impatient">
+                                <label class="form-check-label" for="impatient">
                                     Impatient
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="slow" name="weakness" value="slow">
-                                <label class="form-check-label" for="slow">
+                                <input class="form-check-input" type="checkbox" id="focus" name="weakness" value="focus">
+                                <label class="form-check-label" for="focus">
                                     Lose Focus
                                 </label>
                             </div>
@@ -206,14 +206,14 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="agitate" name="agitate" value="Agitated">
-                                <label class="form-check-label" for="agitate">
+                                <input class="form-check-input" type="checkbox" id="anger" name="weakness" value="Too much anger">
+                                <label class="form-check-label" for="anger">
                                     Too much anger
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="ideologist" name="weakness" value="ideologist">
-                                <label class="form-check-label" for="ideologist">
+                                <input class="form-check-input" type="checkbox" id="personally" name="weakness" value="personally">
+                                <label class="form-check-label" for="personally">
                                     Take things personally
                                 </label>
                             </div>
